src/objects/Apttus__Locale__c.object
<CustomObject>
    <description>Provides locale support for templates</description>
    <fields>
        <fullName>Apttus__DefaultCurrencyPrecision__c</fullName>
        <description>Select Default Precision of Currency fields.</description>
        <inlineHelpText>Select Default Precision of Currency fields.</inlineHelpText>
        <label>Default Currency Precision</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>0</fullName>
                </value>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>3</fullName>
                </value>
                <value>
                    <fullName>4</fullName>
                </value>
                <value>
                    <fullName>5</fullName>
                </value>
                <value>
                    <fullName>6</fullName>
                </value>
                <value>
                    <fullName>7</fullName>
                </value>
                <value>
                    <fullName>8</fullName>
                </value>
                <value>
                    <fullName>9</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Apttus__DefaultDateFormat__c</fullName>
        <label>Default Date Format</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Apttus__LocaleCode__c</controllingField>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>dd MMM yyyy</fullName>
                </value>
                <value>
                    <fullName>dd/MM/yyyy</fullName>
                </value>
                <value>
                    <fullName>dd/MM/yy</fullName>
                </value>
                <value>
                    <fullName>d/M/yy</fullName>
                </value>
                <value>
                    <fullName>d.M.yy</fullName>
                </value>
                <value>
                    <fullName>yyyy-MM-dd</fullName>
                </value>
                <value>
                    <fullName>dd MMMM yyyy</fullName>
                </value>
                <value>
                    <fullName>d MMMM yyyy</fullName>
                </value>
                <value>
                    <fullName>dddd, d MMMM yyyy</fullName>
                </value>
                <value>
                    <fullName>dddd, dd MMMM yyyy</fullName>
                </value>
                <value>
                    <fullName>d MMMM</fullName>
                </value>
                <value>
                    <fullName>MMMM yyyy</fullName>
                </value>
                <value>
                    <fullName>yyyy/MM/dd</fullName>
                </value>
                <value>
                    <fullName>yy/MM/dd</fullName>
                </value>
                <value>
                    <fullName>yy/M/d</fullName>
                </value>
                <value>
                    <fullName>yyyy/M/d</fullName>
                </value>
                <value>
                    <fullName>yyyy&apos;年&apos;M&apos;月&apos;d&apos;日&apos;</fullName>
                </value>
                <value>
                    <fullName>yyyy&apos;年&apos;MM&apos;月&apos;dd&apos;日&apos;</fullName>
                </value>
                <value>
                    <fullName>yyyy&apos;年&apos;M&apos;月&apos;d&apos;日 &apos;dddd</fullName>
                </value>
                <value>
                    <fullName>yyyy&apos;年&apos;MM&apos;月&apos;dd&apos;日 &apos;dddd</fullName>
                </value>
                <value>
                    <fullName>yyyy&apos;年&apos;MMM&apos;月&apos;d&apos;日&apos;</fullName>
                </value>
                <value>
                    <fullName>yyyy&apos;年&apos;MMM&apos;月&apos;d&apos;日 &apos;dddd</fullName>
                </value>
                <value>
                    <fullName>yyyy&apos;年&apos;MMMMd&apos;日&apos;</fullName>
                </value>
                <value>
                    <fullName>yyyy&apos;年&apos;MMMMd&apos;日 &apos;dddd</fullName>
                </value>
                <value>
                    <fullName>M月d日</fullName>
                </value>
                <value>
                    <fullName>yyyy&apos;年&apos;M&apos;月&apos;</fullName>
                </value>
                <value>
                    <fullName>yyyy&apos;年&apos;MMM&apos;月&apos;</fullName>
                </value>
                <value>
                    <fullName>yyyy&apos;年&apos;MMMM</fullName>
                </value>
                <value>
                    <fullName>yy-MM-dd</fullName>
                </value>
                <value>
                    <fullName>M/dd/yy</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Apttus__DefaultDateTimeFormat__c</fullName>
        <label>Default Date/Time Format</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Apttus__DefaultNumberPrecision__c</fullName>
        <description>Select Default Precision of Number fields.</description>
        <inlineHelpText>Select Default Precision of Number fields.</inlineHelpText>
        <label>Default Number Precision</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>0</fullName>
                </value>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>3</fullName>
                </value>
                <value>
                    <fullName>4</fullName>
                </value>
                <value>
                    <fullName>5</fullName>
                </value>
                <value>
                    <fullName>6</fullName>
                </value>
                <value>
                    <fullName>7</fullName>
                </value>
                <value>
                    <fullName>8</fullName>
                </value>
                <value>
                    <fullName>9</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Apttus__DefaultTimeFormat__c</fullName>
        <label>Default Time Format</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Apttus__LocaleCode__c</fullName>
        <label>Locale Code</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Apttus__LocaleName__c</controllingField>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>bg-BG</fullName>
                </value>
                <value>
                    <fullName>de-CH</fullName>
                </value>
                <value>
                    <fullName>de-DE</fullName>
                </value>
                <value>
                    <fullName>el-GR</fullName>
                </value>
                <value>
                    <fullName>en-CA</fullName>
                </value>
                <value>
                    <fullName>en-CH</fullName>
                </value>
                <value>
                    <fullName>en-GB</fullName>
                </value>
                <value>
                    <fullName>en-IE</fullName>
                </value>
                <value>
                    <fullName>en-PH</fullName>
                </value>
                <value>
                    <fullName>en-US</fullName>
                </value>
                <value>
                    <fullName>es-ES</fullName>
                </value>
                <value>
                    <fullName>es-PH</fullName>
                </value>
                <value>
                    <fullName>fil-PH</fullName>
                </value>
                <value>
                    <fullName>fr-CH</fullName>
                </value>
                <value>
                    <fullName>gsw-CH</fullName>
                </value>
                <value>
                    <fullName>hr-HR</fullName>
                </value>
                <value>
                    <fullName>hu-HU</fullName>
                </value>
                <value>
                    <fullName>it-CH</fullName>
                </value>
                <value>
                    <fullName>it-IT</fullName>
                </value>
                <value>
                    <fullName>ja-JP</fullName>
                </value>
                <value>
                    <fullName>ko-KR</fullName>
                </value>
                <value>
                    <fullName>nb-NO</fullName>
                </value>
                <value>
                    <fullName>pl-PL</fullName>
                </value>
                <value>
                    <fullName>pt-BR</fullName>
                </value>
                <value>
                    <fullName>pt-CH</fullName>
                </value>
                <value>
                    <fullName>rm-CH</fullName>
                </value>
                <value>
                    <fullName>ru-RU</fullName>
                </value>
                <value>
                    <fullName>sv-SE</fullName>
                </value>
                <value>
                    <fullName>th-TH</fullName>
                </value>
                <value>
                    <fullName>wae-CH</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Apttus__LocaleName__c</fullName>
        <label>Locale Name</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>English (United States)</fullName>
                </value>
                <value>
                    <fullName>English (United Kingdom)</fullName>
                </value>
                <value>
                    <fullName>English (Canada)</fullName>
                </value>
                <value>
                    <fullName>English (Ireland)</fullName>
                </value>
                <value>
                    <fullName>Italian</fullName>
                </value>
                <value>
                    <fullName>German</fullName>
                </value>
                <value>
                    <fullName>Chinese</fullName>
                </value>
                <value>
                    <fullName>Spanish</fullName>
                </value>
                <value>
                    <fullName>Japanese</fullName>
                </value>
                <value>
                    <fullName>Korean</fullName>
                </value>
                <value>
                    <fullName>Thai</fullName>
                </value>
                <value>
                    <fullName>Norwegian</fullName>
                </value>
                <value>
                    <fullName>Swedish</fullName>
                </value>
                <value>
                    <fullName>Russian</fullName>
                </value>
                <value>
                    <fullName>Portuguese</fullName>
                </value>
                <value>
                    <fullName>Polish</fullName>
                </value>
                <value>
                    <fullName>Greek (Greece)</fullName>
                </value>
                <value>
                    <fullName>German (Switzerland)</fullName>
                </value>
                <value>
                    <fullName>English (Switzerland)</fullName>
                </value>
                <value>
                    <fullName>French (Switzerland)</fullName>
                </value>
                <value>
                    <fullName>Alsatian (Switzerland)</fullName>
                </value>
                <value>
                    <fullName>Italian (Switzerland)</fullName>
                </value>
                <value>
                    <fullName>Portuguese (Switzerland)</fullName>
                </value>
                <value>
                    <fullName>Romansh (Switzerland)</fullName>
                </value>
                <value>
                    <fullName>Walser (Switzerland)</fullName>
                </value>
                <value>
                    <fullName>English (Republic of the Philippines)</fullName>
                </value>
                <value>
                    <fullName>Spanish (Philippines)</fullName>
                </value>
                <value>
                    <fullName>Filipino (Philippines)</fullName>
                </value>
                <value>
                    <fullName>Bulgarian (Bulgaria)</fullName>
                </value>
                <value>
                    <fullName>Croatian (Croatia)</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Apttus__UniqueLocaleName__c</fullName>
        <label>Locale Name (Unique)</label>
        <length>100</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <label>Template Locale</label>
    <listViews>
        <fullName>Apttus__All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Locale</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>